Add latest translations from crowdin

--- a/obs/data/locale/da-DK.ini
+++ b/obs/data/locale/da-DK.ini
@@ -5,6 +5,8 @@ Region="Danmark"
 OK="OK"
 Apply="Anvend"
 Cancel="Annuller"
+Save="Gem"
+Discard="Kassér"
 Yes="Ja"
 No="Nej"
 Add="Tilføj"
@@ -14,6 +16,7 @@ Properties="Egenskaber"
 MoveUp="Flyt Op"
 MoveDown="Flyt Ned"
 Settings="Indstillinger"
+Name="Navn"
 Exit="Afslut"
 Mixer="Mixer"
 Browse="Browse"
@@ -27,6 +30,7 @@ NameExists.Text="Navnet er allerede i brug."
 NoNameEntered.Title="Indtast venligst et gyldigt navn"
 NoNameEntered.Text="Du kan ikke bruge tomme navne."
 
+ConfirmExit.Title="Forlad OBS?"
 
 ConfirmRemove.Title="Bekræfte Fjern"
 ConfirmRemove.Text="Er du sikker på du ønsker at fjerne '$1'?"
@@ -91,6 +95,8 @@ Basic.PropertiesWindow="Egenskaber for '%1'"
 Basic.PropertiesWindow.AutoSelectFormat="%1 (ikke understøttet; autoselect: %2)"
 Basic.PropertiesWindow.SelectColor="Vælg farve"
 Basic.PropertiesWindow.SelectFont="Vælg skrifttype"
+Basic.PropertiesWindow.ConfirmTitle="Indstillinger ændret"
+Basic.PropertiesWindow.Confirm="Der er ændringer, som ikke er gemt.  Vil du gerne beholde dem?"
 
 Basic.InteractionWindow="Interagere med '%1'"
 
@@ -183,7 +189,11 @@ Basic.Settings.Stream="Stream"
 Basic.Settings.Stream.StreamType="Stream Type"
 
 Basic.Settings.Output="Output"
+Basic.Settings.Output.Encoder="Encoder"
+Basic.Settings.Output.SelectDirectory="Vælg optagelsesmappe"
 Basic.Settings.Output.Mode="Output Mode"
+Basic.Settings.Output.Mode.Simple="Simpel"
+Basic.Settings.Output.Mode.Adv="Avanceret"
 Basic.Settings.Output.Simple.SavePath="FLV Recording sti"
 Basic.Settings.Output.VideoBitrate="Video Bitrate"
 Basic.Settings.Output.AudioBitrate="Audio Bitrate"
@@ -193,7 +203,15 @@ Basic.Settings.Output.MaxRetries="Maksimum forsøg"
 Basic.Settings.Output.Advanced="Aktivere avancerede Encoder indstillinger"
 Basic.Settings.Output.UseCBR="Brug konstant bitrate"
 
+Basic.Settings.Output.Adv.Audio.Track1="Spor 1"
+Basic.Settings.Output.Adv.Audio.Track2="Spor 2"
+Basic.Settings.Output.Adv.Audio.Track3="Spor 3"
+Basic.Settings.Output.Adv.Audio.Track4="Spor 4"
 
+Basic.Settings.Output.Adv.Recording.Type="Type"
+Basic.Settings.Output.Adv.Recording.Type.Standard="Standard"
+Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Brug stream encoder)"
+Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="Alle filer"
 
 Basic.Settings.Video="Video"
 Basic.Settings.Video.Adapter="Skærmkort:"
@@ -221,4 +239,6 @@ Basic.Settings.Audio.AuxDevice="Mic/Auxiliary lydenhed"
 Basic.Settings.Audio.AuxDevice2="Mic/Auxiliary lydenhed 2"
 Basic.Settings.Audio.AuxDevice3="Mic/Auxiliary lydenhed 3"
 
+Basic.AdvAudio.Name="Navn"
+Basic.AdvAudio.AudioTracks="Spor"
 
