--- a/obs/data/locale/de-DE.ini
+++ b/obs/data/locale/de-DE.ini
@@ -5,6 +5,8 @@ Region="Deutschland"
 OK="OK"
 Apply="Anwenden"
 Cancel="Abbrechen"
+Save="Speichern"
+Discard="Verwerfen"
 Yes="Ja"
 No="Nein"
 Add="Hinzufügen"
@@ -34,11 +36,11 @@ ConfirmExit.Text="OBS ist derzeit aktiv.  Sind Sie sicher, dass Sie die Anwendun
 ConfirmRemove.Title="Entfernen bestätigen"
 ConfirmRemove.Text="Sind Sie sicher, dass Sie '$1' entfernen möchten?"
 
-Output.ConnectFail.Title="Verbindung fehlgeschalgen"
-Output.ConnectFail.BadPath="Ungültiger Pfad oder Verbindungs URL. Bitte überprüfen Sie Ihre Einstellungen und stellen Sie sicher, dass sie gültig sind."
+Output.ConnectFail.Title="Verbindung fehlgeschlagen"
+Output.ConnectFail.BadPath="Ungültiger Pfad oder Verbindungs-URL. Bitte überprüfen Sie Ihre Einstellungen und stellen Sie sicher, dass sie gültig sind."
 Output.ConnectFail.ConnectFailed="Verbindung zum Server fehlgeschlagen"
 Output.ConnectFail.InvalidStream="Konnte auf den angegebenen Kanal oder Streamschlüssel nicht zugreifen. Dies kann daran liegen, dass der Schlüssel oder Kanal ungültig ist, oder der Server noch denkt, dass Sie angemeldet bist."
-Output.ConnectFail.Error="Ein unerwarteter Fehler ist beim Verbindungsversuch zum Server aufgetreten. Mehr Informationen in der Logdatei."
+Output.ConnectFail.Error="Ein unerwarteter Fehler ist beim Verbindungsversuch zum Server aufgetreten. Mehr Informationen finden Sie in der Logdatei."
 Output.ConnectFail.Disconnected="Verbindung zum Server getrennt."
 
 Output.BadPath.Title="Ungültiger Dateipfad"
@@ -49,7 +51,7 @@ LogReturnDialog.CopyURL="URL kopieren"
 LogReturnDialog.ErrorUploadingLog="Fehler beim Upload der Logdatei"
 
 LicenseAgreement="Lizenzvereinbarung"
-LicenseAgreement.PleaseReview="Bitte lesen Sie die Lizenzbedingungen vor der Verwendung von OBS.  Mit dem verwenden dieses Programms, bestätigen Sie, dass Sie sie gelesen haben und den Bedingungen der <a href='http://www.gnu.org/licenses/gpl-2.0.html'>GNU General Public License v2.0</a> zustimmen. Bitte scrollen Sie nach unten, um den Rest der Vereinbarung zu sehen."
+LicenseAgreement.PleaseReview="Bitte lesen Sie die Lizenzbedingungen vor der Verwendung von OBS.  Mit dem verwenden dieses Programms, bestätigen Sie, dass Sie diese gelesen haben und den Bedingungen der <a href='http://www.gnu.org/licenses/gpl-2.0.html'>GNU General Public License v2.0</a> zustimmen. Bitte scrollen Sie nach unten, um den Rest der Vereinbarung zu sehen."
 LicenseAgreement.ClickIAgreeToContinue="Wenn Sie die Vereinbarung akzeptieren, klicken Sie auf ich stimme zu, um fortzufahren.  Sie müssen akzeptieren, um OBS verwenden zu können."
 LicenseAgreement.IAgree="Ich stimme zu"
 LicenseAgreement.Exit="Beenden"
@@ -64,9 +66,9 @@ Remux.FinishedError="Aufnahme remuxed, aber die Datei kann unvollständig sein"
 Remux.SelectRecording="Wählen Sie die OBS Aufnahme aus …"
 Remux.SelectTarget="Wähle Zieldatei …"
 Remux.FileExistsTitle="Zieldatei ist bereits vorhanden"
-Remux.FileExists="Zieldatei ist bereits vorhanden, möchten Sie sie ersetzen?"
+Remux.FileExists="Zieldatei ist bereits vorhanden. Möchten Sie diese ersetzen?"
 Remux.ExitUnfinishedTitle="Remuxen in Bearbeitung"
-Remux.ExitUnfinished="Remuxen ist noch nicht fertig, wenn Sie jetzt stoppen kann die Zieldatei unbrauchbar werden. \nSind Sie sicher, dass Sie das Remuxen beenden möchten?"
+Remux.ExitUnfinished="Das Remuxen ist noch nicht fertig. Wenn Sie jetzt stoppen, kann die Zieldatei unbrauchbar werden. \nSind Sie sicher, dass Sie das Remuxen beenden möchten?"
 
 UpdateAvailable="Neues Update verfügbar"
 UpdateAvailable.Text="Version %1.%2.%3 ist nun verfügbar.  <a href='%4'>Hier klicken zum Download</a>"
@@ -130,7 +132,7 @@ Basic.TransformWindow.BoundsType.ScaleToHeight="Auf die Höhe der Begrenzungen s
 Basic.TransformWindow.BoundsType.Stretch="Bis zu den Begrenzungen strecken"
 
 Basic.Main.AddSourceHelp.Title="Konnte Quelle nicht hinzufügen"
-Basic.Main.AddSourceHelp.Text="Sie müssen mindestens 1 Szene besitzen um eine Quelle hinzuzufügen."
+Basic.Main.AddSourceHelp.Text="Sie müssen mindestens 1 Szene besitzen, um eine Quelle hinzuzufügen."
 
 Basic.Main.Scenes="Szenen"
 Basic.Main.Sources="Quellen"
@@ -192,7 +194,7 @@ Basic.Settings.Output="Ausgabe"
 Basic.Settings.Output.Encoder="Encoder"
 Basic.Settings.Output.SelectDirectory="Wählen Sie das Aufnahmeverzeichnis"
 Basic.Settings.Output.SelectFile="Wählen Sie die Aufnahmedatei"
-Basic.Settings.Output.Mode="Output Modus"
+Basic.Settings.Output.Mode="Ausgabemodus"
 Basic.Settings.Output.Mode.Simple="Einfach"
 Basic.Settings.Output.Mode.Adv="Erweitert"
 Basic.Settings.Output.Mode.FFmpeg="FFmpeg Ausgabe"
@@ -205,12 +207,13 @@ Basic.Settings.Output.MaxRetries="Maximale Wiederholungsversuche"
 Basic.Settings.Output.Advanced="Erweiterte Encoder-Einstellungen aktivieren"
 Basic.Settings.Output.EncoderPreset="Encoder-Voreinstellung (höher = weniger CPU Auslastung)"
 Basic.Settings.Output.CustomEncoderSettings="Benutzerdefinierte Encoder-Einstellungen"
-Basic.Settings.Output.UseCBR="Benutze Konstante Bitrate"
+Basic.Settings.Output.UseCBR="Benutze konstante Bitrate"
 Basic.Settings.Output.UseBufferSize="Benutzerdefinierte Puffergröße"
 
 Basic.Settings.Output.Adv.Rescale="Ausgabe umskalieren"
 Basic.Settings.Output.Adv.AudioTrack="Audiospur"
 Basic.Settings.Output.Adv.Streaming="Streamen"
+Basic.Settings.Output.Adv.ApplyServiceSettings="Erzwinge Streamingdienst-Encodereinstellungen"
 Basic.Settings.Output.Adv.Audio.Track1="Spur 1"
 Basic.Settings.Output.Adv.Audio.Track2="Spur 2"
 Basic.Settings.Output.Adv.Audio.Track3="Spur 3"
@@ -243,7 +246,7 @@ Basic.Settings.Video.Numerator="Zähler:"
 Basic.Settings.Video.Denominator="Nenner:"
 Basic.Settings.Video.Renderer="Renderer:"
 Basic.Settings.Video.InvalidResolution="Ungültige Auflösung. Muss sein [Breite]x[Höhe] (z.B. 1920x1080)"
-Basic.Settings.Video.CurrentlyActive="Videoausgabe ist derzeit aktiv. Bitte schalten Sie alle Ausgaben ab um die Videoeinstellungen zu ändern."
+Basic.Settings.Video.CurrentlyActive="Videoausgabe ist derzeit aktiv. Bitte schalten Sie alle Ausgaben ab, um die Videoeinstellungen zu ändern."
 
 Basic.Settings.Video.DownscaleFilter.Bilinear="Bilinear (am schnellsten, aber Unscharf bei Skalierung)"
 Basic.Settings.Video.DownscaleFilter.Bicubic="Bicubic (geschärfte Skalierung, 16 Stichproben)"
@@ -252,11 +255,11 @@ Basic.Settings.Video.DownscaleFilter.Lanczos="Lanczos (geschärfte Skalierung, 3
 Basic.Settings.Audio="Audio"
 Basic.Settings.Audio.SampleRate="Abtastrate"
 Basic.Settings.Audio.Channels="Kanäle"
-Basic.Settings.Audio.DesktopDevice="Desktop Audio Gerät"
-Basic.Settings.Audio.DesktopDevice2="Desktop Audio Gerät 2"
-Basic.Settings.Audio.AuxDevice="Mikrofon/Extern Audio Gerät"
-Basic.Settings.Audio.AuxDevice2="Mikrofon/Extern Audio Gerät 2"
-Basic.Settings.Audio.AuxDevice3="Mikrofon/Extern Audio Gerät 3"
+Basic.Settings.Audio.DesktopDevice="Desktop Audiogerät"
+Basic.Settings.Audio.DesktopDevice2="Desktop Audiogerät 2"
+Basic.Settings.Audio.AuxDevice="Mikrofon/Externes Audiogerät"
+Basic.Settings.Audio.AuxDevice2="Mikrofon/Externes Audiogerät 2"
+Basic.Settings.Audio.AuxDevice3="Mikrofon/Externes Audiogerät 3"
 
 Basic.AdvAudio="Erweiterte Audioeigenschaften"
 Basic.AdvAudio.Name="Name"
