--- a/obs/data/locale/es-ES.ini
+++ b/obs/data/locale/es-ES.ini
@@ -5,6 +5,8 @@ Region="España, América Latina"
 OK="Aceptar"
 Apply="Aplicar"
 Cancel="Cancelar"
+Save="Grabar"
+Discard="Descartar"
 Yes="Sí"
 No="No"
 Add="Agregar"
@@ -211,6 +213,7 @@ Basic.Settings.Output.UseBufferSize="Usar tamaño de caché personalizado"
 Basic.Settings.Output.Adv.Rescale="Cambiar la escala de salida"
 Basic.Settings.Output.Adv.AudioTrack="Pista de audio"
 Basic.Settings.Output.Adv.Streaming="En tiempo real"
+Basic.Settings.Output.Adv.ApplyServiceSettings="Aplicar ajustes de codificador de servicio streaming"
 Basic.Settings.Output.Adv.Audio.Track1="Pista 1"
 Basic.Settings.Output.Adv.Audio.Track2="Pista 2"
 Basic.Settings.Output.Adv.Audio.Track3="Pista 3"
