--- a/obs/data/locale/eu-ES.ini
+++ b/obs/data/locale/eu-ES.ini
@@ -5,6 +5,8 @@ Region="Estatu Batuak"
 OK="Ongi"
 Apply="Ezarri"
 Cancel="Ezeztatu"
+Save="Gorde"
+Discard="Baztertu"
 Yes="Bai"
 No="Ez"
 Add="Gehitu"
@@ -211,6 +213,7 @@ Basic.Settings.Output.UseBufferSize="Erabili Norbere Buffer Neurria"
 Basic.Settings.Output.Adv.Rescale="Birneurriratu Irteera"
 Basic.Settings.Output.Adv.AudioTrack="Audio Bidea"
 Basic.Settings.Output.Adv.Streaming="Jarioa"
+Basic.Settings.Output.Adv.ApplyServiceSettings="Behartu jario zerbitzu kodeatzaile ezarpenak"
 Basic.Settings.Output.Adv.Audio.Track1="1 Bidea"
 Basic.Settings.Output.Adv.Audio.Track2="2 Bidea"
 Basic.Settings.Output.Adv.Audio.Track3="3 Bidea"
