--- a/obs/data/locale/fi-FI.ini
+++ b/obs/data/locale/fi-FI.ini
@@ -5,6 +5,8 @@ Region="Suomi"
 OK="OK"
 Apply="Käytä"
 Cancel="Peruuta"
+Save="Tallenna"
+Discard="Hylkää"
 Yes="Kyllä"
 No="Ei"
 Add="Lisää"
@@ -14,6 +16,7 @@ Properties="Ominaisuudet"
 MoveUp="Siirrä ylös"
 MoveDown="Siirrä alas"
 Settings="Asetukset"
+Name="Nimi"
 Exit="Poistu"
 Mixer="Mikseri"
 Browse="Selaa"
@@ -27,6 +30,8 @@ NameExists.Text="Nimi on jo käytössä."
 NoNameEntered.Title="Syötä sopiva nimi"
 NoNameEntered.Text="Et voi käyttää tyhjiä nimiä."
 
+ConfirmExit.Title="Sulje OBS?"
+ConfirmExit.Text="OBS on käytössä. Haluatko varmasti sulkea sen?"
 
 ConfirmRemove.Title="Vahvista poisto"
 ConfirmRemove.Text="Haluatko varmasti poistaa '$1'?"
@@ -187,7 +192,13 @@ Basic.Settings.Stream="Lähetys"
 Basic.Settings.Stream.StreamType="Lähetystyyppi"
 
 Basic.Settings.Output="Ulostulo"
+Basic.Settings.Output.Encoder="Enkooderi"
+Basic.Settings.Output.SelectDirectory="Valitse tallennuskansio"
+Basic.Settings.Output.SelectFile="Valitse tallennustiedosto"
 Basic.Settings.Output.Mode="Ulostulon tila"
+Basic.Settings.Output.Mode.Simple="Yksinkertainen"
+Basic.Settings.Output.Mode.Adv="Kehittynyt"
+Basic.Settings.Output.Mode.FFmpeg="FFmpeg ulostulo"
 Basic.Settings.Output.Simple.SavePath="FLV-tallennuksen polku"
 Basic.Settings.Output.VideoBitrate="Kuvan bitrate"
 Basic.Settings.Output.AudioBitrate="Äänen bitrate"
@@ -195,9 +206,32 @@ Basic.Settings.Output.Reconnect="Automaattinen uudelleenyhdistys"
 Basic.Settings.Output.RetryDelay="Uudelleenyrityksen viive (sekunteja)"
 Basic.Settings.Output.MaxRetries="Uudelleenyhdistyksien määrä"
 Basic.Settings.Output.Advanced="Käytä enkooderin lisäasetuksia"
+Basic.Settings.Output.EncoderPreset="Enkooderin asetus (korkeampi lisää tehon kulutusta)"
+Basic.Settings.Output.CustomEncoderSettings="Valinnaiset enkooderiasetukset"
 Basic.Settings.Output.UseCBR="Pidä bitrate vakiona"
+Basic.Settings.Output.UseBufferSize="Käytä valinnaista puskurin kokoa"
 
+Basic.Settings.Output.Adv.Rescale="Uudelleenskaalaa ulostulo"
+Basic.Settings.Output.Adv.AudioTrack="Ääniraita"
+Basic.Settings.Output.Adv.Streaming="Lähetys"
+Basic.Settings.Output.Adv.ApplyServiceSettings="Pakota asetukset palvelun suosituksiin"
+Basic.Settings.Output.Adv.Audio.Track1="Raita 1"
+Basic.Settings.Output.Adv.Audio.Track2="Raita 2"
+Basic.Settings.Output.Adv.Audio.Track3="Raita 3"
+Basic.Settings.Output.Adv.Audio.Track4="Raita 4"
 
+Basic.Settings.Output.Adv.Recording="Tallennus"
+Basic.Settings.Output.Adv.Recording.Type="Tyyppi"
+Basic.Settings.Output.Adv.Recording.Type.Standard="Tavallinen"
+Basic.Settings.Output.Adv.Recording.Type.FFmpegOutput="Valinnainen lähtö (FFmpeg)"
+Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Käytä lähetysenkooderia)"
+Basic.Settings.Output.Adv.FFmpeg.SaveFilter.Common="Yleiset tallennusmuodot"
+Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="Kaikki tiedostot"
+Basic.Settings.Output.Adv.FFmpeg.SavePathURL="Tiedostopolku tai URL-osoite"
+Basic.Settings.Output.Adv.FFmpeg.VEncoder="Video-enkooderi (tyhjä = oletus)"
+Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Video-enkooderin asetukset"
+Basic.Settings.Output.Adv.FFmpeg.AEncoder="Ääni-enkooderi (tyhjä = oletus)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Ääni-enkooderin asetukset"
 
 Basic.Settings.Video="Kuva"
 Basic.Settings.Video.Adapter="Näytönohjain:"
@@ -233,5 +267,6 @@ Basic.AdvAudio.Name="Nimi"
 Basic.AdvAudio.Volume="Äänenvoimakkuus (%)"
 Basic.AdvAudio.Mono="Miksaa yksikanavaiseksi"
 Basic.AdvAudio.Panning="Vieritys"
-Basic.AdvAudio.SyncOffset="Synkronoinnin poikkeama (ms)"
+Basic.AdvAudio.SyncOffset="Sync Offset (ms)"
+Basic.AdvAudio.AudioTracks="Raidat"
 
