--- a/obs/data/locale/fr-FR.ini
+++ b/obs/data/locale/fr-FR.ini
@@ -5,6 +5,8 @@ Region="France"
 OK="Ok"
 Apply="Appliquer"
 Cancel="Annuler"
+Save="Enregistrer"
+Discard="Ignorer les modifications"
 Yes="Oui"
 No="Non"
 Add="Ajouter"
@@ -211,6 +213,7 @@ Basic.Settings.Output.UseBufferSize="Utiliser une taille de buffer personnalisé
 Basic.Settings.Output.Adv.Rescale="Mise à l'échelle"
 Basic.Settings.Output.Adv.AudioTrack="Piste audio"
 Basic.Settings.Output.Adv.Streaming="Streaming"
+Basic.Settings.Output.Adv.ApplyServiceSettings="Imposer les paramètres d'encodage du service de streaming"
 Basic.Settings.Output.Adv.Audio.Track1="Piste 1"
 Basic.Settings.Output.Adv.Audio.Track2="Piste 2"
 Basic.Settings.Output.Adv.Audio.Track3="Piste 3"
