--- a/obs/data/locale/gl-ES.ini
+++ b/obs/data/locale/gl-ES.ini
@@ -205,7 +205,9 @@ Basic.Settings.Output.MaxRetries="Número máximo de tentativas"
 Basic.Settings.Output.Advanced="Activar a configuración do codificador avanzada"
 Basic.Settings.Output.CustomEncoderSettings="Axustes do codificador personalizados"
 Basic.Settings.Output.UseCBR="Utilizar unha velocidade de bits constante"
+Basic.Settings.Output.UseBufferSize="Utilizar tamaño do búfer personalizado"
 
+Basic.Settings.Output.Adv.Rescale="Cambiar a escala de saída"
 Basic.Settings.Output.Adv.AudioTrack="Pista de audio"
 Basic.Settings.Output.Adv.Streaming="En tempo real"
 Basic.Settings.Output.Adv.Audio.Track1="Pista 1"
@@ -217,6 +219,7 @@ Basic.Settings.Output.Adv.Recording="Gravando"
 Basic.Settings.Output.Adv.Recording.Type="Tipo"
 Basic.Settings.Output.Adv.Recording.Type.Standard="Estándar"
 Basic.Settings.Output.Adv.Recording.Type.FFmpegOutput="Saída personalizada (FFmpeg)"
+Basic.Settings.Output.Adv.FFmpeg.SaveFilter.Common="Formatos comúns de gravación"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="Todos os ficheiros"
 Basic.Settings.Output.Adv.FFmpeg.SavePathURL="Camiño do ficheiro ou URL"
 Basic.Settings.Output.Adv.FFmpeg.VEncoder="Codificador de vídeo (en branco = por defecto)"
