--- a/obs/data/locale/ja-JP.ini
+++ b/obs/data/locale/ja-JP.ini
@@ -17,7 +17,7 @@ Settings="設定"
 Name="名称"
 Exit="終了"
 Mixer="ミキサー"
-Browse="ブラウズ"
+Browse="参照"
 Mono="モノラル"
 Stereo="ステレオ"
 DroppedFrames="ドロップしたフレーム %1 (%2%)"
@@ -211,6 +211,7 @@ Basic.Settings.Output.UseBufferSize="特定バッファサイズを使用"
 Basic.Settings.Output.Adv.Rescale="出力をリスケールする"
 Basic.Settings.Output.Adv.AudioTrack="オーディオ トラック"
 Basic.Settings.Output.Adv.Streaming="配信"
+Basic.Settings.Output.Adv.ApplyServiceSettings="ストリーミングサービスのエンコーダ設定を適用する"
 Basic.Settings.Output.Adv.Audio.Track1="トラック 1"
 Basic.Settings.Output.Adv.Audio.Track2="トラック 2"
 Basic.Settings.Output.Adv.Audio.Track3="トラック 3"
