--- a/obs/data/locale/ko-KR.ini
+++ b/obs/data/locale/ko-KR.ini
@@ -5,6 +5,8 @@ Region="대한민국"
 OK="확인"
 Apply="적용"
 Cancel="취소"
+Save="저장"
+Discard="저장 안함"
 Yes="예"
 No="아니오"
 Add="추가"
@@ -210,7 +212,8 @@ Basic.Settings.Output.UseBufferSize="사용자 임의 버퍼  크기 설정"
 
 Basic.Settings.Output.Adv.Rescale="출력  배율 재조정"
 Basic.Settings.Output.Adv.AudioTrack="오디오 트랙"
-Basic.Settings.Output.Adv.Streaming="스트리밍"
+Basic.Settings.Output.Adv.Streaming="방송"
+Basic.Settings.Output.Adv.ApplyServiceSettings="방송 서비스 인코더 설정 강제 적용"
 Basic.Settings.Output.Adv.Audio.Track1="트랙 1"
 Basic.Settings.Output.Adv.Audio.Track2="트랙 2"
 Basic.Settings.Output.Adv.Audio.Track3="트랙 3"
