--- a/obs/data/locale/nl-NL.ini
+++ b/obs/data/locale/nl-NL.ini
@@ -211,6 +211,7 @@ Basic.Settings.Output.UseBufferSize="Aangepaste buffergrootte gebruiken"
 Basic.Settings.Output.Adv.Rescale="Uitvoer Schalen"
 Basic.Settings.Output.Adv.AudioTrack="Geluidsspoor"
 Basic.Settings.Output.Adv.Streaming="Streamen"
+Basic.Settings.Output.Adv.ApplyServiceSettings="Forceer encoderinstellingen van de streaming dienst"
 Basic.Settings.Output.Adv.Audio.Track1="Spoor 1"
 Basic.Settings.Output.Adv.Audio.Track2="Spoor 2"
 Basic.Settings.Output.Adv.Audio.Track3="Spoor 3"
