--- a/obs/data/locale/ru-RU.ini
+++ b/obs/data/locale/ru-RU.ini
@@ -5,6 +5,8 @@ Region="Российская Федерация"
 OK="OK"
 Apply="Применить"
 Cancel="Отмена"
+Save="Сохранить"
+Discard="Отклонить"
 Yes="Да"
 No="Нет"
 Add="Добавить"
@@ -211,6 +213,7 @@ Basic.Settings.Output.UseBufferSize="Использовать пользоват
 Basic.Settings.Output.Adv.Rescale="Перемасштабировать вывод"
 Basic.Settings.Output.Adv.AudioTrack="Звуковая дорожка"
 Basic.Settings.Output.Adv.Streaming="Потоковое вещание"
+Basic.Settings.Output.Adv.ApplyServiceSettings="Принудительно использовать настройки кодировщика потоковой службы"
 Basic.Settings.Output.Adv.Audio.Track1="Дорожка 1"
 Basic.Settings.Output.Adv.Audio.Track2="Дорожка 2"
 Basic.Settings.Output.Adv.Audio.Track3="Дорожка 3"
