--- a/plugins/obs-x264/data/locale/fi-FI.ini
+++ b/plugins/obs-x264/data/locale/fi-FI.ini
@@ -1,6 +1,12 @@
 Bitrate="Bitrate"
+CustomBufsize="Käytä valinnaista puskurin kokoa"
 BufferSize="Puskurin koko"
+UseCBR="Käytä CBR"
+CRF="CRF"
 KeyframeIntervalSec="Keyframe-väli (sec, 0=auto)"
+CPUPreset="CPU:n käyttö (korkeampi vaatii enemmän tehoa)"
 Profile="Profiili"
 Tune="Hienosäätö"
+None="(Ei mitään)"
+EncoderOptions="x264-asetukset (erotetaan välilyönnillä)"
 
