--- a/plugins/win-dshow/data/locale/de-DE.ini
+++ b/plugins/win-dshow/data/locale/de-DE.ini
@@ -1,4 +1,4 @@
-VideoCaptureDevice="Videogerät"
+VideoCaptureDevice="Videoaufnahmegerät"
 Device="Gerät"
 ConfigureAudio="Audio konfigurieren"
 ConfigureVideo="Video konfigurieren"
