win-dshow: Fix names of AVerMedia encoders

--- a/plugins/win-dshow/data/locale/en-US.ini
+++ b/plugins/win-dshow/data/locale/en-US.ini
@@ -29,5 +29,5 @@ Deactivate="Deactivate"
 
 # encoder text
 Bitrate="Bitrate"
-Encoder.C985="AverMedia C985 Hardware Encoder"
-Encoder.C353="AverMedia C353 Hardware Encoder"
+Encoder.C985="AVerMedia C985 Encoder"
+Encoder.C353="AVerMedia C353 Encoder"
