Add latest translations from crowdin

--- a/obs/data/locale/da-DK.ini
+++ b/obs/data/locale/da-DK.ini
@@ -31,6 +31,7 @@ NoNameEntered.Title="Indtast venligst et gyldigt navn"
 NoNameEntered.Text="Du kan ikke bruge tomme navne."
 
 ConfirmExit.Title="Forlad OBS?"
+ConfirmExit.Text="OBS er i øjeblikket aktivt.  Er du sikker på du ønsker at forlade det?"
 
 ConfirmRemove.Title="Bekræfte Fjern"
 ConfirmRemove.Text="Er du sikker på du ønsker at fjerne '$1'?"
@@ -170,6 +171,7 @@ Basic.MainMenu.Edit.Order.MoveUp="Flyt Op (&U)"
 Basic.MainMenu.Edit.Order.MoveDown="Flyt Ned (&D)"
 Basic.MainMenu.Edit.Order.MoveToTop="Flyt til &Toppen"
 Basic.MainMenu.Edit.Order.MoveToBottom="Flyt til &Bunden"
+Basic.MainMenu.Edit.AdvAudio="&Avancerede lydegenskaber"
 
 Basic.MainMenu.Help="&Hjælp"
 Basic.MainMenu.Help.Logs="&Logfiler"
@@ -191,9 +193,11 @@ Basic.Settings.Stream.StreamType="Stream Type"
 Basic.Settings.Output="Output"
 Basic.Settings.Output.Encoder="Encoder"
 Basic.Settings.Output.SelectDirectory="Vælg optagelsesmappe"
+Basic.Settings.Output.SelectFile="Vælg optagelsesfil"
 Basic.Settings.Output.Mode="Output Mode"
 Basic.Settings.Output.Mode.Simple="Simpel"
 Basic.Settings.Output.Mode.Adv="Avanceret"
+Basic.Settings.Output.Mode.FFmpeg="FFmpeg output"
 Basic.Settings.Output.Simple.SavePath="FLV Recording sti"
 Basic.Settings.Output.VideoBitrate="Video Bitrate"
 Basic.Settings.Output.AudioBitrate="Audio Bitrate"
@@ -203,15 +207,20 @@ Basic.Settings.Output.MaxRetries="Maksimum forsøg"
 Basic.Settings.Output.Advanced="Aktivere avancerede Encoder indstillinger"
 Basic.Settings.Output.UseCBR="Brug konstant bitrate"
 
+Basic.Settings.Output.Adv.AudioTrack="Lydspor"
+Basic.Settings.Output.Adv.Streaming="Streaming"
+Basic.Settings.Output.Adv.ApplyServiceSettings="Håndhæv streaming service encoder indstillinger"
 Basic.Settings.Output.Adv.Audio.Track1="Spor 1"
 Basic.Settings.Output.Adv.Audio.Track2="Spor 2"
 Basic.Settings.Output.Adv.Audio.Track3="Spor 3"
 Basic.Settings.Output.Adv.Audio.Track4="Spor 4"
 
+Basic.Settings.Output.Adv.Recording="Optagelse"
 Basic.Settings.Output.Adv.Recording.Type="Type"
 Basic.Settings.Output.Adv.Recording.Type.Standard="Standard"
 Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Brug stream encoder)"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="Alle filer"
+Basic.Settings.Output.Adv.FFmpeg.SavePathURL="Filsti eller URL"
 
 Basic.Settings.Video="Video"
 Basic.Settings.Video.Adapter="Skærmkort:"
@@ -239,6 +248,14 @@ Basic.Settings.Audio.AuxDevice="Mic/Auxiliary lydenhed"
 Basic.Settings.Audio.AuxDevice2="Mic/Auxiliary lydenhed 2"
 Basic.Settings.Audio.AuxDevice3="Mic/Auxiliary lydenhed 3"
 
+Basic.Settings.Advanced="Avanceret"
+Basic.Settings.Advanced.Video.ColorFormat="Farveformat"
+Basic.Settings.Advanced.Video.ColorRange.Partial="Delvis"
+Basic.Settings.Advanced.Video.ColorRange.Full="Fuld"
+
+Basic.AdvAudio="Avancerede lydegenskaber"
 Basic.AdvAudio.Name="Navn"
+Basic.AdvAudio.Volume="Volumen (%)"
+Basic.AdvAudio.Panning="Panorering"
 Basic.AdvAudio.AudioTracks="Spor"
 
