--- a/obs/data/locale/de-DE.ini
+++ b/obs/data/locale/de-DE.ini
@@ -261,6 +261,14 @@ Basic.Settings.Audio.AuxDevice="Mikrofon/Externes Audiogerät"
 Basic.Settings.Audio.AuxDevice2="Mikrofon/Externes Audiogerät 2"
 Basic.Settings.Audio.AuxDevice3="Mikrofon/Externes Audiogerät 3"
 
+Basic.Settings.Advanced="Erweitert"
+Basic.Settings.Advanced.Audio.BufferingTime="Audio Pufferungszeit"
+Basic.Settings.Advanced.Video.ColorFormat="Farbformat"
+Basic.Settings.Advanced.Video.ColorSpace="YUV-Farbraum"
+Basic.Settings.Advanced.Video.ColorRange="YUV Farbpalette"
+Basic.Settings.Advanced.Video.ColorRange.Partial="Teilweise"
+Basic.Settings.Advanced.Video.ColorRange.Full="Voll"
+
 Basic.AdvAudio="Erweiterte Audioeigenschaften"
 Basic.AdvAudio.Name="Name"
 Basic.AdvAudio.Volume="Lautstärke (%)"
