--- a/obs/data/locale/es-ES.ini
+++ b/obs/data/locale/es-ES.ini
@@ -261,6 +261,14 @@ Basic.Settings.Audio.AuxDevice="Dispositivo de audio Mic/auxiliar"
 Basic.Settings.Audio.AuxDevice2="Dispositivo de audio Mic/auxiliar 2"
 Basic.Settings.Audio.AuxDevice3="Dispositivo de audio Mic/auxiliar 3"
 
+Basic.Settings.Advanced="Avanzado"
+Basic.Settings.Advanced.Audio.BufferingTime="Tiempo de búfer de audio"
+Basic.Settings.Advanced.Video.ColorFormat="Formato de color"
+Basic.Settings.Advanced.Video.ColorSpace="Espacio de color YUV"
+Basic.Settings.Advanced.Video.ColorRange="Gama de Color YUV"
+Basic.Settings.Advanced.Video.ColorRange.Partial="Parcial"
+Basic.Settings.Advanced.Video.ColorRange.Full="Completo"
+
 Basic.AdvAudio="Propiedades de Audio avanzadas"
 Basic.AdvAudio.Name="Nombre"
 Basic.AdvAudio.Volume="Volumen (%)"
