--- a/obs/data/locale/fr-FR.ini
+++ b/obs/data/locale/fr-FR.ini
@@ -261,6 +261,14 @@ Basic.Settings.Audio.AuxDevice="Périphérique Audio Micro/Auxiliaire"
 Basic.Settings.Audio.AuxDevice2="Périphérique Audio Micro/Auxiliaire 2"
 Basic.Settings.Audio.AuxDevice3="Périphérique Audio Micro/Auxiliaire 3"
 
+Basic.Settings.Advanced="Avancé"
+Basic.Settings.Advanced.Audio.BufferingTime="Temps de mise en mémoire tampon audio"
+Basic.Settings.Advanced.Video.ColorFormat="Format de couleur"
+Basic.Settings.Advanced.Video.ColorSpace="Espace de couleur YUV"
+Basic.Settings.Advanced.Video.ColorRange="Gamme de couleurs YUV"
+Basic.Settings.Advanced.Video.ColorRange.Partial="Partielle"
+Basic.Settings.Advanced.Video.ColorRange.Full="Complète"
+
 Basic.AdvAudio="Propriétés audio avancées"
 Basic.AdvAudio.Name="Nom"
 Basic.AdvAudio.Volume="Volume (%)"
