--- a/obs/data/locale/gl-ES.ini
+++ b/obs/data/locale/gl-ES.ini
@@ -5,6 +5,8 @@ Region="Galicia"
 OK="Aceptar"
 Apply="Aplicar"
 Cancel="Cancelar"
+Save="Gardar"
+Discard="Descartar"
 Yes="Si"
 No="Non"
 Add="Engadir"
@@ -255,6 +257,13 @@ Basic.Settings.Audio.DesktopDevice2="Dispositivo de audio de escritorio 2"
 Basic.Settings.Audio.AuxDevice="Dispositivo de audio mic./auxiliar"
 Basic.Settings.Audio.AuxDevice2="Dispositivo de audio mic./auxiliar 2"
 Basic.Settings.Audio.AuxDevice3="Dispositivo de audio mic./auxiliar 3"
+
+Basic.Settings.Advanced="Avanzado"
+Basic.Settings.Advanced.Audio.BufferingTime="Tempo do búfer de audio"
+Basic.Settings.Advanced.Video.ColorFormat="Formato da cor"
+Basic.Settings.Advanced.Video.ColorSpace="Espazo de cor YUV"
+Basic.Settings.Advanced.Video.ColorRange="Gama de cor YUV"
+Basic.Settings.Advanced.Video.ColorRange.Partial="Parcial"
 
 Basic.AdvAudio="Propiedades de audio avanzadas"
 Basic.AdvAudio.Name="Nome"
