--- a/obs/data/locale/nb-NO.ini
+++ b/obs/data/locale/nb-NO.ini
@@ -5,6 +5,8 @@ Region="Norge"
 OK="OK"
 Apply="Bruk"
 Cancel="Avbryt"
+Save="Lagre"
+Discard="Forkast"
 Yes="Ja"
 No="Nei"
 Add="Legg til"
@@ -211,6 +213,7 @@ Basic.Settings.Output.UseBufferSize="Bruk egendefinert bufferstørrelse"
 Basic.Settings.Output.Adv.Rescale="Reskaler produkt"
 Basic.Settings.Output.Adv.AudioTrack="Lydspor"
 Basic.Settings.Output.Adv.Streaming="Strømming"
+Basic.Settings.Output.Adv.ApplyServiceSettings="Bruk strømmetjenerens koderinstillinger"
 Basic.Settings.Output.Adv.Audio.Track1="Spor 1"
 Basic.Settings.Output.Adv.Audio.Track2="Spor 2"
 Basic.Settings.Output.Adv.Audio.Track3="Spor 3"
@@ -257,6 +260,14 @@ Basic.Settings.Audio.DesktopDevice2="Skrivebordslyd 2"
 Basic.Settings.Audio.AuxDevice="Mikrofon/Aux"
 Basic.Settings.Audio.AuxDevice2="Mikrofon/Aux 2"
 Basic.Settings.Audio.AuxDevice3="Mikrofon/Aux 3"
+
+Basic.Settings.Advanced="Avansert"
+Basic.Settings.Advanced.Audio.BufferingTime="Lydbuffertid"
+Basic.Settings.Advanced.Video.ColorFormat="Fargeformat"
+Basic.Settings.Advanced.Video.ColorSpace="YUV fargerom"
+Basic.Settings.Advanced.Video.ColorRange="YUV fargespekter"
+Basic.Settings.Advanced.Video.ColorRange.Partial="Delvis"
+Basic.Settings.Advanced.Video.ColorRange.Full="Full"
 
 Basic.AdvAudio="Avanserte lydinstillinger"
 Basic.AdvAudio.Name="Navn"
