--- a/obs/data/locale/ru-RU.ini
+++ b/obs/data/locale/ru-RU.ini
@@ -261,6 +261,14 @@ Basic.Settings.Audio.AuxDevice="Mic/Auxiliary Аудиоустройство"
 Basic.Settings.Audio.AuxDevice2="Mic/Auxiliary Аудиоустройство 2"
 Basic.Settings.Audio.AuxDevice3="Mic/Auxiliary Аудиоустройство 3"
 
+Basic.Settings.Advanced="Расширенные"
+Basic.Settings.Advanced.Audio.BufferingTime="Время буферизации аудио"
+Basic.Settings.Advanced.Video.ColorFormat="Цветовой формат"
+Basic.Settings.Advanced.Video.ColorSpace="Цветовое пространство YUV"
+Basic.Settings.Advanced.Video.ColorRange="Цветовой диапазон YUV"
+Basic.Settings.Advanced.Video.ColorRange.Partial="Частичный"
+Basic.Settings.Advanced.Video.ColorRange.Full="Полный"
+
 Basic.AdvAudio="Расширенные свойства аудио"
 Basic.AdvAudio.Name="Название"
 Basic.AdvAudio.Volume="Громкость (%)"
