--- a/obs/data/locale/sv-SE.ini
+++ b/obs/data/locale/sv-SE.ini
@@ -5,6 +5,8 @@ Region="Sverige"
 OK="OK"
 Apply="Bekräfta"
 Cancel="Avbryt"
+Save="Spara"
+Discard="Radera"
 Yes="Ja"
 No="Nej"
 Add="Lägg till"
@@ -211,6 +213,7 @@ Basic.Settings.Output.UseBufferSize="Använd anpassad buffertstorlek"
 Basic.Settings.Output.Adv.Rescale="Skala om utmatning"
 Basic.Settings.Output.Adv.AudioTrack="Ljudspår"
 Basic.Settings.Output.Adv.Streaming="Strömning"
+Basic.Settings.Output.Adv.ApplyServiceSettings="Tillämpa strömningstjänstens kodarinställningar"
 Basic.Settings.Output.Adv.Audio.Track1="Spår 1"
 Basic.Settings.Output.Adv.Audio.Track2="Spår 2"
 Basic.Settings.Output.Adv.Audio.Track3="Spår 3"
@@ -257,6 +260,7 @@ Basic.Settings.Audio.DesktopDevice2="Skrivbordsljudenhet 2"
 Basic.Settings.Audio.AuxDevice="Mikrofon/extra ljudenhet"
 Basic.Settings.Audio.AuxDevice2="Mikrofon/extra ljudenhet 2"
 Basic.Settings.Audio.AuxDevice3="Mikrofon/extra ljudenhet 3"
+
 
 Basic.AdvAudio="Avancerade ljudinställningar"
 Basic.AdvAudio.Name="Namn"
