--- a/obs/data/locale/zh-CN.ini
+++ b/obs/data/locale/zh-CN.ini
@@ -5,6 +5,8 @@ Region="中华人民共和国"
 OK="确定"
 Apply="应用"
 Cancel="取消"
+Save="保存"
+Discard="舍弃"
 Yes="是"
 No="否"
 Add="添加"
@@ -211,6 +213,7 @@ Basic.Settings.Output.UseBufferSize="使用自定义缓存大小"
 Basic.Settings.Output.Adv.Rescale="重新缩放输出"
 Basic.Settings.Output.Adv.AudioTrack="音轨"
 Basic.Settings.Output.Adv.Streaming="流"
+Basic.Settings.Output.Adv.ApplyServiceSettings="强制流服务编码器设置"
 Basic.Settings.Output.Adv.Audio.Track1="轨道 1"
 Basic.Settings.Output.Adv.Audio.Track2="轨道 2"
 Basic.Settings.Output.Adv.Audio.Track3="轨道 3"
@@ -257,6 +260,14 @@ Basic.Settings.Audio.DesktopDevice2="桌面音频设备 2"
 Basic.Settings.Audio.AuxDevice="麦克风/辅助音频设备"
 Basic.Settings.Audio.AuxDevice2="麦克风/辅助音频设备 2"
 Basic.Settings.Audio.AuxDevice3="麦克风/辅助音频设备 3"
+
+Basic.Settings.Advanced="高级"
+Basic.Settings.Advanced.Audio.BufferingTime="音频缓冲时间"
+Basic.Settings.Advanced.Video.ColorFormat="颜色格式"
+Basic.Settings.Advanced.Video.ColorSpace="YUV 颜色空间"
+Basic.Settings.Advanced.Video.ColorRange="YUV 颜色范围"
+Basic.Settings.Advanced.Video.ColorRange.Partial="局部"
+Basic.Settings.Advanced.Video.ColorRange.Full="全部"
 
 Basic.AdvAudio="高级音频属性"
 Basic.AdvAudio.Name="名称"
