--- a/plugins/obs-x264/data/locale/da-DK.ini
+++ b/plugins/obs-x264/data/locale/da-DK.ini
@@ -1,6 +1,11 @@
 Bitrate="Bitrate"
+CustomBufsize="Brug brugerdefineret bufferstørrelse"
 BufferSize="Bufferstørrelsen"
+UseCBR="Brug CBR"
+CRF="CRF"
 KeyframeIntervalSec="Keyframe Interval (sekunder, 0 = auto)"
 Profile="Profil"
 Tune="Stil ind"
+None="(Ingen)"
+EncoderOptions="x264 indstillinger (adskilt af mellemrum)"
 
