--- a/plugins/win-capture/data/locale/da-DK.ini
+++ b/plugins/win-capture/data/locale/da-DK.ini
@@ -10,4 +10,10 @@ Compatibility="Multi-adapter kompatibilitet"
 AllowTransparency="Tillad gennemsigtighed"
 Monitor="Skærm"
 PrimaryMonitor="Primære skærm"
+GameCapture="Spil optager"
+GameCapture.AnyFullscreen="Optag ethvert fuldskærms program"
+GameCapture.ForceScaling="Tving skalering"
+GameCapture.ScaleRes="Skalere opløsning"
+GameCapture.LimitFramerate="Begræns optagelses framerate"
+GameCapture.CaptureOverlays="Optag fra tredjepart overlays (såsom Steam)"
 
