--- a/plugins/win-dshow/data/locale/da-DK.ini
+++ b/plugins/win-dshow/data/locale/da-DK.ini
@@ -1,10 +1,15 @@
 VideoCaptureDevice="Video Optagelsesenhed"
 Device="Enhed"
+ColorSpace.Default="Standard"
+ColorRange="YUV farveområde"
+ColorRange.Partial="Delvis"
+ColorRange.Full="Fuld"
 ConfigureAudio="Konfigurere lyd"
 ConfigureVideo="Konfigurere Video"
 ConfigureCrossbar="Konfigurere overligger"
 ResFPSType="Opløsning/FPS Type"
 ResFPSType.Custom="Brugerdefineret"
+ResFPSType.DevPreferred="Enhedens standard"
 FPS.Matching="Match Udgang FPS"
 FPS.Highest="Højeste FPS"
 Resolution="Opløsning"
@@ -13,5 +18,11 @@ VideoFormat.Any="Enhver"
 VideoFormat.Unknown="Ukendt (%1)"
 UseCustomAudioDevice="Brug brugerdefinerede lydenhed"
 AudioDevice="Lydenhed"
+Buffering="Buffering"
+Buffering.Enable="Slå til"
+Buffering.Disable="Slå fra"
+Activate="Aktivér"
+Deactivate="Deaktivér"
 
+Bitrate="Bitrate"
 
