--- a/plugins/win-dshow/data/locale/de-DE.ini
+++ b/plugins/win-dshow/data/locale/de-DE.ini
@@ -1,5 +1,10 @@
 VideoCaptureDevice="Videoaufnahmegerät"
 Device="Gerät"
+ColorSpace="YUV-Farbraum"
+ColorSpace.Default="Standard"
+ColorRange="YUV Farbpalette"
+ColorRange.Partial="Teilweise"
+ColorRange.Full="Voll"
 ConfigureAudio="Audio konfigurieren"
 ConfigureVideo="Video konfigurieren"
 ConfigureCrossbar="Crossbar konfigurieren"
@@ -22,6 +27,6 @@ Activate="Aktivieren"
 Deactivate="Deaktivieren"
 
 Bitrate="Bitrate"
-Encoder.C985="AVerMedia C985 Hardware Encoder"
-Encoder.C353="AVerMedia C353 Hardware Encoder"
+Encoder.C985="AVerMedia C985 Encoder"
+Encoder.C353="AVerMedia C353 Encoder"
 
