--- a/plugins/win-dshow/data/locale/fr-FR.ini
+++ b/plugins/win-dshow/data/locale/fr-FR.ini
@@ -1,5 +1,10 @@
 VideoCaptureDevice="Périphérique de Capture Vidéo"
 Device="Appareil"
+ColorSpace="Espace de couleur YUV"
+ColorSpace.Default="Par défaut"
+ColorRange="Gamme de couleurs YUV"
+ColorRange.Partial="Partielle"
+ColorRange.Full="Complète"
 ConfigureAudio="Configurer l'audio"
 ConfigureVideo="Configurer la Vidéo"
 ConfigureCrossbar="Configurer la Crossbar"
@@ -22,6 +27,4 @@ Activate="Activer"
 Deactivate="Désactiver"
 
 Bitrate="Débit"
-Encoder.C985="Encodeur matériel AverMedia C985"
-Encoder.C353="Encodeur matériel AverMedia C353"
 
