--- a/plugins/win-dshow/data/locale/ru-RU.ini
+++ b/plugins/win-dshow/data/locale/ru-RU.ini
@@ -1,5 +1,10 @@
 VideoCaptureDevice="Устройство захвата видео"
 Device="Устройство"
+ColorSpace="Цветовое пространство YUV"
+ColorSpace.Default="По умолчанию"
+ColorRange="Цветовой диапазон YUV"
+ColorRange.Partial="Частичный"
+ColorRange.Full="Полный"
 ConfigureAudio="Настроить звук"
 ConfigureVideo="Настройка видео"
 ConfigureCrossbar="Настройка кроссбара"
@@ -22,6 +27,4 @@ Activate="Активировать"
 Deactivate="Деактивировать"
 
 Bitrate="Битрейт"
-Encoder.C985="Аппаратный кодировщик AverMedia C985"
-Encoder.C353="Аппаратный кодировщик AverMedia C353"
 
