--- a/plugins/win-dshow/data/locale/nb-NO.ini
+++ b/plugins/win-dshow/data/locale/nb-NO.ini
@@ -1,5 +1,10 @@
 VideoCaptureDevice="Videoopptaksenhet"
 Device="Enhet"
+ColorSpace="YUV fargerom"
+ColorSpace.Default="Standard"
+ColorRange="YUV fargespekter"
+ColorRange.Partial="Delvis"
+ColorRange.Full="Full"
 ConfigureAudio="Konfigurer lyd"
 ConfigureVideo="Konfigurer video"
 ConfigureCrossbar="Konfigurer bildemikser"
@@ -22,6 +27,6 @@ Activate="Aktiver"
 Deactivate="Deaktiver"
 
 Bitrate="Bitrate"
-Encoder.C985="AverMedia C985 maskinvarekoder"
-Encoder.C353="AverMedia C353 maskinvarekoder"
+Encoder.C985="AVerMedia C985 koder"
+Encoder.C353="AVerMedia C353 koder"
 
