--- a/plugins/win-dshow/data/locale/zh-CN.ini
+++ b/plugins/win-dshow/data/locale/zh-CN.ini
@@ -1,5 +1,10 @@
 VideoCaptureDevice="视频捕获设备"
 Device="设备"
+ColorSpace="YUV 颜色空间"
+ColorSpace.Default="默认"
+ColorRange="YUV 颜色范围"
+ColorRange.Partial="局部"
+ColorRange.Full="全部"
 ConfigureAudio="配置音频"
 ConfigureVideo="配置视频"
 ConfigureCrossbar="配置Crossbar"
@@ -22,6 +27,6 @@ Activate="激活"
 Deactivate="取消激活"
 
 Bitrate="比特率"
-Encoder.C985="AverMedia C985 硬件编码器"
-Encoder.C353="AverMedia C353硬件编码器"
+Encoder.C985="AVerMedia C985 编码器"
+Encoder.C353="AVerMedia C353编码器"
 
