--- a/plugins/win-dshow/data/locale/en-US.ini
+++ b/plugins/win-dshow/data/locale/en-US.ini
@@ -29,5 +29,5 @@ Deactivate="Deactivate"
 
 # encoder text
 Bitrate="Bitrate"
-Encoder.C985="AVerMedia C985 Encoder"
-Encoder.C353="AVerMedia C353 Encoder"
+Encoder.C985="AVerMedia h264 Encoder (c985)"
+Encoder.C353="AVerMedia h264 Encoder (c353)"
