UI: Add a visual cue to sources property window Display a "No properties available" text in source's property window if that source doesn't have any properties.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -1,4 +1,4 @@
-# Note to translators: *DO NOT* translate this file directly. Instead, visit http://crowdin.com/project/obs-studio and submit your translations there.
+﻿# Note to translators: *DO NOT* translate this file directly. Instead, visit http://crowdin.com/project/obs-studio and submit your translations there.
 # Pull requests for translations outside of CrowdIn will not be accepted.
 # Read this forum post for more instructions on submitting translations: https://obsproject.com/forum/threads/how-to-contribute-translations-for-obs.16327/
 
@@ -118,6 +118,7 @@ Basic.PropertiesWindow.SelectColor="Select color"
 Basic.PropertiesWindow.SelectFont="Select font"
 Basic.PropertiesWindow.ConfirmTitle="Settings Changed"
 Basic.PropertiesWindow.Confirm="There are unsaved changes.  Do you want to keep them?"
+Basic.PropertiesWindow.NoPropertiesLabel="No properties available"
 
 # interaction window
 Basic.InteractionWindow="Interacting with '%1'"
