UI: Display message if no properties available
Display "No properties available" text in the property view if there are
no properties available.

Closes Pull Request #377

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -118,6 +118,7 @@ Basic.PropertiesWindow.SelectColor="Select color"
 Basic.PropertiesWindow.SelectFont="Select font"
 Basic.PropertiesWindow.ConfirmTitle="Settings Changed"
 Basic.PropertiesWindow.Confirm="There are unsaved changes.  Do you want to keep them?"
+Basic.PropertiesWindow.NoProperties="No properties available"
 
 # interaction window
 Basic.InteractionWindow="Interacting with '%1'"
