UI: Implement theme selection option
OBS will offer the user a list of themes which are .qss files inside
data/obs-studio/themes.  If no theme is found in the configuration, it
loads the default theme for the system.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -217,6 +217,7 @@ Basic.Settings.Confirm="You have unsaved changes.  Save changes?"
 
 # basic mode 'general' settings
 Basic.Settings.General="General"
+Basic.Settings.General.Theme="Theme"
 Basic.Settings.General.Language="Language"
 
 # basic mode 'stream' settings
