linux-v4l2: Add video standard property
Add the video standard property and hide it by default.

--- a/plugins/linux-v4l2/data/locale/en-US.ini
+++ b/plugins/linux-v4l2/data/locale/en-US.ini
@@ -2,6 +2,7 @@ V4L2Input="Video Capture Device (V4L2)"
 Device="Device"
 Input="Input"
 ImageFormat="Video Format"
+VideoStandard="Video Standard"
 Resolution="Resolution"
 FrameRate="Frame Rate"
 LeaveUnchanged="Leave Unchanged"
