linux-v4l2: Add dv timing property
Add the dv timing property and hide it by default.

--- a/plugins/linux-v4l2/data/locale/en-US.ini
+++ b/plugins/linux-v4l2/data/locale/en-US.ini
@@ -3,6 +3,7 @@ Device="Device"
 Input="Input"
 ImageFormat="Video Format"
 VideoStandard="Video Standard"
+DVTiming="DV Timing"
 Resolution="Resolution"
 FrameRate="Frame Rate"
 LeaveUnchanged="Leave Unchanged"
