UI: Add user interface for filters

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -17,6 +17,7 @@ No="No"
 Add="Add"
 Remove="Remove"
 Rename="Rename"
+Filters="Filters"
 Properties="Properties"
 MoveUp="Move Up"
 MoveDown="Move Down"
@@ -126,6 +127,15 @@ Basic.InteractionWindow="Interacting with '%1'"
 # status bar
 Basic.StatusBar.Reconnecting="Disconnected, reconnecting (attempt %1)"
 Basic.StatusBar.ReconnectSuccessful="Reconnection successful"
+
+# filters window
+Basic.Filters="Filters"
+Basic.Filters.AsyncFilters="Audio/Video Filters"
+Basic.Filters.AudioFilters="Audio Filters"
+Basic.Filters.EffectFilters="Effect Filters"
+Basic.Filters.Title="Filters for '%1'"
+Basic.Filters.AddFilter.Title="Filter name"
+Basic.Filters.AddFilter.Text="Please specify the name of the filter"
 
 # transform window
 Basic.TransformWindow="Scene Item Transform"
