--- a/plugins/obs-ffmpeg/data/locale/en-US.ini
+++ b/plugins/obs-ffmpeg/data/locale/en-US.ini
@@ -1,3 +1,14 @@
 FFmpegOutput="FFmpeg Output"
 FFmpegAAC="FFmpeg Default AAC Encoder"
 Bitrate="Bitrate"
+
+FFmpegSource="Media Source"
+LocalFile="Local File"
+Looping="Loop"
+Input="Input"
+InputFormat="Input Format"
+ForceFormat="Force format conversion"
+HardwareDecode="Use hardware decoding when available"
+Advanced="Advanced"
+AudioBufferSize="Audio Buffer Size (frames)"
+VideoBufferSize="Video Buffer Size (frames)"
